--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "0.75.0",
     "react-native-gesture-handler": "~2.18.1",
     "react-native-reanimated": "~3.15.0",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.34.0"
   },
   "devDependencies": {
@@ -33,5 +34,8 @@
         "react-native-screens@~3.31.1"
       ]
     }
+  },
+  "resolutions": {
+    "react-native-screens": "~4.0.0-beta.13"
   }
 }
